app/assets/stylesheets/styles.sass
/*
 *= require web-app-theme/base.css
 *= require web-app-theme/themes/activo/style.css
 *= require overcast/jquery-ui-1.8.16.custom.css
 *= require_self
 */

$form-left-column: 200px
$space-between-label-and-field: 10px

@mixin border-radius($radius:4px)
  border-radius: $radius
  -moz-border-radius: $radius
  -webkit-border-radius: $radius

#main
  .block
    .content
      .inner
        padding-bottom: 37px

table
  $checkbox: 10px
  width: 100%
  border-collapse: collapse
  margin-bottom: 15px

  th
    padding: 10px
    font-weight: bold
    text-align: left

    &.checkbox
      width: $checkbox

    .first
      width: 30px

    &.last, &.actions
      width: 103px

  .checkbox
    margin-left: 10px

  td,th
    padding: 10px

    &.checkbox
      width: $checkbox

    .last
      text-align: right

    &.monetary, &.number
      text-align: right

  tr:nth-child(odd)
    background: #e0e0e0

  &.table_form
    width: auto

    tr
      background: none

      td
        padding: 0

form, .form
  .multi_input
    label
      float: none
    span
      padding-left: 15px

  .colleft
    float: left
    padding: 10px 20px 0 10px
    width: 500px
    clear: both

  .colright
    float: left
    padding: 10px 0 0 10px
    width: 500px

  fieldset
    margin-bottom: 18px
    padding-top: 18px
    border: none

    label
      display: inline
      float: left
      &:after
        content: ''

    .radio_group
      margin: -10px 0 -10px 0
      padding-left: $form-left-column
    .popbox
      margin-left: -240px
    legend
      color: #404040
      display: block
      font-size: 15.5px
      line-height: 1
      padding-left: $form-left-column

      &.box_name
        background-color: #002134
        color: #fff
        border: solid 2px #e0e0e0
        padding: 5px 10px 5px 10px

  label
    font-size: 14px
    float: left
    color: #404040
    width: $form-left-column - $space-between-label-and-field
    text-align: right
    margin-right: $space-between-label-and-field
    padding-top: 8px
    clear: left

    &.field_with_errors
      border: solid 1px red
      display: inline

      &:after, label:after
        content: ''

    &:after
      content: ':'

  input, select
    margin: 6px 0
    vertical-align: middle

  input
    width: 270px

    &.button, &[type=submit]
      width: auto !important

  .input.checkbox
    input
      position: relative
      left: -123px

    label
      display: block
      padding-left: 123px
      padding-top: 4px
      &:after
        content: ''

  textarea
    height: 115px

  .description
    margin-left: 5px
    color: #CCC
    font-style: italic

  .group
    margin-bottom: 5px
    clear: both

  .actions
    clear: left
    margin:
      top: 18px
      bottom: 18px
    padding: 0 20px 18px $form-left-column

  table td input
    margin: 0

  .ui-button
    margin-left: -1px
  .ui-button-icon-only .ui-button-text
    padding: 0.35em
  .ui-autocomplete-input
    margin: 0
    padding: 0.48em 0 0.47em 0.45em

#dialog_item .form
  label
    width: 110px

  input
    float: left
    &[type=text]
      width: 222px

  fieldset
    padding: 0
    margin: 0

  .radio_group
    margin-left: 121px
    float: left
    &:after
      clear: both

    label
      clear: none
      width: auto
      padding-left: 5px

      &:after
        content: ''

  .actions
    padding-left: 121px

#sidebar form, #sidebar .form
  padding-top: 10px

  label
    text-align: left
    width: auto
    display: block
    float: none
    padding-top: 5px
    padding-left: 3px
    margin: 0
    &:after
      clear: both

  input
    width: 60%
    margin: 2px 0
    
  input:hover, textarea:hover 
    border: 1px solid #A2A294
    box-shadow: 0 0 3px rgba(0, 0, 0, 0.3)
    
  .radio_group
    &:after
      clear: both

    label
      clear: none
      width: auto
      padding-left: 17px
      &:after
        content: ''

    input
      border: solid 1px green
      float: left

  .actions
    padding: 0 27px 0 0
    margin: 2px 0
    text-align: right
  
.flash
  .message
    @include border-radius
    text-align: center
    margin: 0 auto 15px
    color: white
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3)

    p
      margin: 8px

    &.error, &.error-list, &.alert
      border: 1px solid #993624
      background: #cc4831 url("messages/error.png") no-repeat 10px center

    &.warning
      border: 1px solid #bb9004
      background: #f9c006 url("messages/warning.png") no-repeat 10px center

    &.notice
      color: #28485e
      text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7)
      border: 1px solid #8a9daa
      background: #b8d1e2 url("messages/notice.png") no-repeat 10px center

    .error-list
      text-align: left

      h2
        font-size: 16px
        text-align: center

      ul
        padding-left: 22px
        line-height: 18px
        list-style-type: square
        margin-bottom: 15px

#box .block .content
  padding: 25px 20px

